[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/ui/interface/dialogs/SaveBox.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/interface/dialogs/UiNinePatchRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/ui/interface/dialogs/ChoiceBox.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/menu/BiomonMenu.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/ui/interface/pkmnfl.ttf"

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/ui/interface/pkmnfl.ttf"

[sub_resource type="DynamicFont" id=2]
size = 12
extra_spacing_top = 2
font_data = SubResource( 4 )

[node name="SaveBox" type="CanvasLayer"]
visible = false
script = ExtResource( 1 )
dialog_file = "res://data/dialogues/save.json"

[node name="NinePatchRect" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = 102.0
margin_right = 240.0
margin_bottom = 160.0

[node name="Name" type="RichTextLabel" parent="NinePatchRect"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 20.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Name:"

[node name="Text" type="RichTextLabel" parent="NinePatchRect"]
visible = false
margin_left = 6.0
margin_top = 16.0
margin_right = 236.0
margin_bottom = 53.0
rect_clip_content = false
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Text...?
"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ChoiceBox" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 48.0
margin_top = 53.0
margin_right = 109.0
margin_bottom = 89.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="ChoiceBox"]
visible = false
margin_left = 5.0
margin_top = 4.0
margin_right = 54.0
margin_bottom = 32.0

[node name="Choice1" parent="ChoiceBox/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_right = 49.0
focus_neighbour_left = NodePath("../Choice2")
focus_neighbour_top = NodePath("../Choice2")
focus_neighbour_right = NodePath("../Choice2")
focus_neighbour_bottom = NodePath("../Choice2")
focus_next = NodePath("../Choice2")
focus_previous = NodePath("../Choice2")

[node name="Choice2" parent="ChoiceBox/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 16.0
margin_right = 49.0
margin_bottom = 28.0
focus_neighbour_left = NodePath("../Choice1")
focus_neighbour_top = NodePath("../Choice1")
focus_neighbour_right = NodePath("../Choice1")
focus_neighbour_bottom = NodePath("../Choice1")
focus_next = NodePath("../Choice1")
focus_previous = NodePath("../Choice1")

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
